[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]
[ext_resource path="res://player/states/idle.gd" type="Script" id=3]
[ext_resource path="res://player/states/run.gd" type="Script" id=4]
[ext_resource path="res://player/states/fall.gd" type="Script" id=5]
[ext_resource path="res://player/states/jump.gd" type="Script" id=6]
[ext_resource path="res://player/states/double_jump.gd" type="Script" id=7]
[ext_resource path="res://player/dust/dust_run.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/camera.gd" type="Script" id=9]
[ext_resource path="res://player/bg_light_mask.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75, 76, 77, 78, 79 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "dust_run"
}, {
"args": [  ],
"method": "dust_run"
} ]
}

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="rotate" type="Node2D" parent="."]

[node name="player" type="Sprite" parent="rotate"]
texture = ExtResource( 2 )
vframes = 10
hframes = 10
frame = 79

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="down_left" type="RayCast2D" parent="."]
position = Vector2( -3, 8 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="down_right" type="RayCast2D" parent="."]
position = Vector2( 3, 8 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 3 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="double_jump" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="dust_run" parent="." instance=ExtResource( 8 )]

[node name="camera_target" type="Node2D" parent="."]
editor/display_folded = true

[node name="camera" type="Camera2D" parent="camera_target"]
current = true
script = ExtResource( 9 )

[node name="bg_light" type="Light2D" parent="."]
texture = ExtResource( 10 )
color = Color( 0.960784, 0.807843, 0.447059, 1 )
energy = 0.6
range_item_cull_mask = 4
shadow_enabled = true
shadow_item_cull_mask = 4

